--- a/index.html
+++ b/index.html
@@ -744,6 +744,28 @@
         </div>
         
         <div class="dashboard-section">
+            <h2><i class="fas fa-chart-pie"></i> Key Metrics</h2>
+            <div class="metrics-grid">
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-search"></i> Avg. Monthly Indexed Travel Queries (2024)</div>
+                    <div class="metric-value">25.73 <span class="change negative"><i class="fas fa-arrow-down"></i> -0.23% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-ad"></i> Media Impressions (2025 Plan)</div>
+                    <div class="metric-value">1.42B <span class="change positive"><i class="fas fa-arrow-up"></i> +61.32% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-plane"></i> Flight Searches (2024)</div>
+                    <div class="metric-value">95.7K <span class="change negative"><i class="fas fa-arrow-down"></i> -11.03% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-hotel"></i> Hotel Guests (2024)</div>
+                    <div class="metric-value">77.7K <span class="change positive"><i class="fas fa-arrow-up"></i> +18.77% YoY</span></div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="dashboard-section">
             <h2><i class="fas fa-globe-europe"></i> Market Characteristics</h2>
             <div class="metrics-grid">
                 <div class="metric-card">
